-Added Mountaineer promotion (Special promotion that lets units enter Mountain tiles and makes them take 20 less damage if they end their turn on one)
-Added Filter pump improvement (Built on Lakes exclusively, improves tile's Water yield by 2)

//
Balance Changes
//

-Aerospace Facility no longer penalizes city Production, but now has a maintenance cost of 3
-Arcology Dome now requires 20 population instead of 2 to build, but adds more City HP
-Arena/Colosseum now replace Stadium for Ignis/Legion
-Armaments Production Line no longer penalizes city Production, but also no longer gives a free Armory (it now *requires* an Armory) and has a maintenance cost of 3
-Armor Production Line no longer penalizes city Production and unlocks a new promotion, but also no longer gives a free Tank, its Production boost to Armor units is reduced to 33%, and it has a maintenance cost of 3
-Armory now requires Hoplology instead of Construction + worked Weapons tile
-Artificial glaciers and Moisture traps can now be placed on Mountains
-Atlas, Blackwarden, Hexlock, Patriots all lose free Electronics Tech
-Barbarian Water units can no longer pillage tiles
-Biosphere Project moved to Atmosphere Remediation
-Bomb Shelter (and replacements) now give +3 Water per turn instead of +1
-Computers and Radar now require Electronics
-Data Center nerfed to +5 Science instead of +50% Science (Hexlock's version nerfed to +8 instead of +65%), but now adds +4 Science to worked Data and Encrypted Data tiles
-Deadrock Clan now has better defense from spies and an extra spy instead of Barbarian recruitment
-Dinghy is no longer a Low Tech unit, addressing an issue caused for The Patriots
-Dinghy and Patrol Boat now obsolete at Manufacturing
-"Faction Identity" World Wonders are now automatically built when the capital is founded, due to changes in AI reverting behavior that previously encouraged them to build the wonders immediately
-Fixed problem of Unhappiness penalties applying at 0 Happiness