@@ -15,12 +15,12 @@
 		"[+15]% Strength <for [{non-[Barbarian]} {AI player}] units> <vs [Barbarian] units> <on [Settler] difficulty>",
 		"[+20]% Strength <for [{non-[Barbarian]} {AI player}] units> <vs [Barbarian] units> <on [Tourist] difficulty>",
 
-		"[This Unit] gains [10] XP <for [{non-[Barbarian]} {AI player}] units> <on [King] difficulty> <upon gaining a [Military] unit>",
-		"[This Unit] gains [10] XP <for [{non-[Barbarian]} {AI player}] units> <on [Emperor] difficulty> <upon gaining a [Military] unit>",
+		// "[This Unit] gains [10] XP <for [{non-[Barbarian]} {AI player}] units> <on [King] difficulty> <upon gaining a [Military] unit>",
+		// "[This Unit] gains [10] XP <for [{non-[Barbarian]} {AI player}] units> <on [Emperor] difficulty> <upon gaining a [Military] unit>",
 		"[+25]% XP gained from combat <for [{non-[Barbarian]} {AI player}] units> <on [Emperor] difficulty>",
-		"[This Unit] gains [30] XP <for [{non-[Barbarian]} {AI player}] units> <on [Immortal] difficulty> <upon gaining a [Military] unit>",
+		// "[This Unit] gains [30] XP <for [{non-[Barbarian]} {AI player}] units> <on [Immortal] difficulty> <upon gaining a [Military] unit>",
 		"[+50]% XP gained from combat <for [{non-[Barbarian]} {AI player}] units> <on [Immortal] difficulty>",
-		"[This Unit] gains [30] XP <for [{non-[Barbarian]} {AI player}] units> <on [Deity] difficulty> <upon gaining a [Military] unit>",
+		// "[This Unit] gains [30] XP <for [{non-[Barbarian]} {AI player}] units> <on [Deity] difficulty> <upon gaining a [Military] unit>",
 		"[+100]% XP gained from combat <for [{non-[Barbarian]} {AI player}] units> <on [Deity] difficulty>",
 		
 		"[-15]% construction time for [All] improvements <for [AI player] Civilizations> <on [King] difficulty>",
