@@ -129,8 +129,7 @@
 			"Rough terrain",
 			"Has an elevation of [4] for visibility calculations",
 			"Occurs in chains at high elevations",
-			"Units ending their turn on this terrain take [50] damage <for units without [Mountaineer]>",
-			"Units ending their turn on this terrain take [30] damage <for units with [Mountaineer]>",
+			"Units ending their turn on this terrain take [50] damage",
 			"Always Fertility [-2] for Map Generation",
 			"Considered [Undesirable] when determining start locations"
 		]
